--- a/LandingPage/code/landing.css
+++ b/LandingPage/code/landing.css
@@ -45,9 +45,9 @@ html,body{
 }
 
 .black-section h2{
-    font-weight: 400;
+    font-weight: 300;
     color: white;
-    font-size: 42px;
+    font-size: 72px;
     text-align: center;
 }
 
@@ -61,6 +61,8 @@ html,body{
     display: grid;
     gap: 20px;
     grid-template-columns: repeat(auto-fit,minmax(320px,1fr));
+    max-width: 1100px;
+    margin: 50px auto;
 }
 
 .grid-items{
@@ -75,7 +77,6 @@ html,body{
     border-radius: 10px;
     box-shadow: 3px 5px 5px rgba(1,1,1,0.2);
     transition: 0.2s ease-in-out;
-    margin: 50px 0;
 }
 
 .card:hover{
@@ -121,7 +122,7 @@ html,body{
 .about p
 {
     color: white;
-    margin: 20px 0 20px 0;
+    margin-bottom: 20px;
 }
 
 .contact h2,
@@ -136,7 +137,7 @@ footer{
     text-align: center;
     color: white;
     padding: 20px;
-    font-size: 20px;
+    font-size: 15px;
     background-color: #000;
 }
 
@@ -190,7 +191,7 @@ footer span  a{
 
     .black-section h2 span{
         font-size: 32px;
-        font-weight: 300;
+        font-weight: 400;
     }
 
     .bottom-section{
@@ -200,6 +201,10 @@ footer span  a{
     .about h2,
     .contact h2
     {
+        font-size: 32px;
+    }
+
+    h1{
         font-size: 32px;
     }
 }
